2013-10-22  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_lex.c (YY_INPUT): Split out into...
	(dt_input): ... this new function.  No longer check for parser
	errors.  Use memcpy() for string input.
	(EOF rules): Introduce, for states S1 and S3.
	* test/unittest/lexer/err.eof-in-comment.d: Check that EOF in a
	comment is diagnosed.
	* test/unittest/lexer/err.eof-in-pragma.d: Likewise, for pragmata.
	* test/unittest/lexer/tst.yyinput-pragma-bug.d: Make sure that
	pragmata that span the 8192-byte boundary do not cause spurious
	errors.
	* NEWS: Describe this change.

2013-09-19  Nick Alcock  <nick.alcock@oracle.com>

	* Build: Install NEWS too.
	* GNUmakefile: This is 0.4.0.

2013-09-18  Nick Alcock  <nick.alcock@oracle.com>

	* INCOMPATIBILITIES: Update.
	* NEWS: Likewise.
	* dtrace-utils.spec: 

2013-09-11  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_pid.c (dt_pid_create_probes): Avoid direct lock use.
	* libdtrace/dt_proc.h (dt_proc_t.dpr_cond_waiting): Remove.
	Note the set of currently valid proxy requests.
	* libdtrace/dt_proc.c (dt_proc_loop): Split out of
	dt_proc_control() and add awaiting_continue machinery and
	dt_proc_continue handling.
	(dt_proc_continue): Use it.
	(dt_proc_stop): No longer maintain dt_proc_waiting or wait on the
	dpr_cv: thunk down to dt_proc_loop() instead, exiting fast if the
	process has terminated while there.  Force the lock count to 1 so
	that dt_proc_loop() can unlock it, not 0.
	(dt_proc_control_cleanup): No longer check dpr_cond_waiting.
	(dt_proc_create_thread): Remove redundant braces.
	(dt_proc_continue): Adjust return so that this can be used as a
	proxy request.  No longer broadcast to the cv: talk down the proxy
	pipe instead.
	(dt_proc_dpr_lock): Add debugging around lock acquisition.

	* runtest.sh: Export the tmpdir variable.

	* Makefunctions (hdr-clean-template): Clean up the USDT headers here.
	(cmd-template): Call it.
	* test/triggers/Build (trigger-template): Don't do the cleanup here.
