@@ -1,0 +1,5 @@
+OPEN FAILED with errno 2 for /non/existant/file
+At exit, errno = 0
+
+-- @@stderr --
+cat: /non/existant/file: No such file or directory
