@@ -1,3 +1,7 @@
+2013-11-05  Kris Van Hees <kris.van.hees@oracle.com>
+
+	* test/unittest/builtinvar/tst.errno2.d: Test errno value in syscall.
+
 2013-10-22  Nick Alcock  <nick.alcock@oracle.com>
 
 	* libdtrace/dt_lex.c (YY_INPUT): Split out into...
